# simple-instagram-django

./: .flake8  manage.py  pyproject.toml  requirements.txt
apps/core/: models.py  urls.py  views.py
apps/core/common/: decorators.py
apps/core/migrations/: 0001_initial.py
apps/core/views/: user_views.py
simple_instagram_django/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
