[tool.poetry]
name = "simple_instagram_django"
version = "0.1.0"
description = ""
authors = ["Le Duc Duy <duy.leduc8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2"
django-debug-toolbar = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
